@@ -65,7 +65,7 @@ public class AsteroidRenderer implements CampaignRenderer
                 }
                 drawQueue.finishShape(GL_POINTS);
             }
-            
+
             drawQueue.finish();
         }
 
@@ -78,11 +78,13 @@ public class AsteroidRenderer implements CampaignRenderer
         // Draw asteroids
         radar.enableStencilTest();
         glPointSize(2f * radar.getCurrentZoomLevel());
+        glEnable(GL_POINT_SMOOTH);
         glEnableClientState(GL_VERTEX_ARRAY);
         glEnableClientState(GL_COLOR_ARRAY);
         drawQueue.draw();
         glDisableClientState(GL_COLOR_ARRAY);
         glDisableClientState(GL_VERTEX_ARRAY);
+        glDisable(GL_POINT_SMOOTH);
         radar.disableStencilTest();
     }
 }
